--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
         "tailwindcss": "^3.4.0",
         "vite": "^6.0.11",
         "vue": "^3.3.13"
+    },
+    "dependencies": {
+        "flowbite": "^3.1.2",
+        "flowbite-vue": "^0.1.9"
     }
 }
