--- a/package.json
+++ b/package.json
@@ -8,15 +8,15 @@
     "devDependencies": {
         "@inertiajs/vue3": "^2.0",
         "@tailwindcss/forms": "^0.5.7",
+        "@tailwindcss/postcss": "^4.0.14",
         "@tailwindcss/typography": "^0.5.10",
         "@tailwindcss/vite": "^4.0.0",
         "@vitejs/plugin-vue": "^5.0.0",
-        "autoprefixer": "^10.4.16",
         "axios": "^1.7.4",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.2.0",
         "postcss": "^8.4.32",
-        "tailwindcss": "^3.4.0",
+        "tailwindcss": "^4.0.14",
         "vite": "^6.0.11",
         "vue": "^3.3.13"
     }
