--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
         "tailwindcss": "^4.0.14",
         "vite": "^6.0.11",
         "vue": "^3.3.13"
+    },
+    "dependencies": {
+        "@headlessui/vue": "^1.7.23",
+        "lucide-vue-next": "^0.483.0"
     }
 }
